--- a/tp4/style.css
+++ b/tp4/style.css
@@ -1,14 +1,104 @@
-body {
-    margin: 100px;
+header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: .5px solid grey;
+    margin: 5px;
 }
 
-.caja_zapato {
-    margin: 50px 80px 60px 70px;
-    padding: 25px;
-    border: 5px solid red;
-    display: inline;
+.container {
+    margin-right: 5%;
+    margin-left: 5%;
+    background-color: white;
 }
 
-.caja_zapato:hover {
-    background-color: red;
+main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin: 5px;  
+    flex: 3;
+}
+
+.article{
+    flex-grow: 1;
+    align-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    border-bottom: .5px solid grey;
+    margin-top: 5%;
+    
+}
+
+aside {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: flex-start;
+}
+
+.logo {
+    width: 80px;
+    height: 80px;
+    
+    border: 5%; 
+}
+
+.img-bugs {
+    width: 350px;
+    margin: 10px;
+
+}
+.descripcion {
+    width: 350px;
+    margin-right: 5px;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+h1{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: bold;
+    display: block;
+    word-wrap: break-word;
+    width: 350px;
+    margin-bottom: 5%;
+}
+div p{
+
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.articles{
+    border-bottom: .5px solid grey;
+    margin-top: 5%;
+    align-items: flex-start;
+}
+.content {
+    border-bottom: .5px solid grey;
+}
+.img-bugs-aside {
+    width: 150px;
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+.nav-link {
+    font-size: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    margin: 5px;
 }
