--- a/tp4/style.css
+++ b/tp4/style.css
@@ -5,19 +5,24 @@ header {
     align-items: center;
     border-bottom: .5px solid grey;
     margin: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .container {
-    margin-right: 5%;
-    margin-left: 5%;
     background-color: white;
+    max-width: 100%;
+    
 }
 
 main {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: flex-start;
+    margin-top: 10px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 section {
@@ -25,7 +30,7 @@ section {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: flex-start;
-    margin: 5px;  
+    max-width: 70%;
     flex: 3;
 }
 
@@ -53,7 +58,7 @@ aside {
     width: 80px;
     height: 80px;
     
-    border: 5%; 
+    margin: 2%; 
 }
 
 .img-bugs {
@@ -67,8 +72,18 @@ aside {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
 }
+footer p {
+    margin-top: 0px;
+}
 
-h1{
+footer h1 {
+    margin-bottom: 0px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+main h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
     font-weight: bold;
@@ -77,10 +92,17 @@ h1{
     width: 350px;
     margin-bottom: 5%;
 }
+h2 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
 div p{
 
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
+    
 }
 
 .articles{
@@ -102,3 +124,17 @@ div p{
     color: black;
     margin: 5px;
 }
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    color: gainsboro;
+    height: 180px;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10px;
+}
+
